[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/2d/background_general.png" type="Texture" id=2]
[ext_resource path="res://game/map/particle_map_material.tres" type="Material" id=3]
[ext_resource path="res://hud/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://audio/audio_stacking.gd" type="Script" id=5]
[ext_resource path="res://resources/assets/audio/ui/contruction/building_finished.tres" type="Resource" id=6]
[ext_resource path="res://resources/assets/audio/ui/contruction/ship_finished.tres" type="Resource" id=7]
[ext_resource path="res://.import/amb_plateau.ogg-69c6a6e43c944b0ee78438b93e3dad67.oggstr" type="AudioStream" id=8]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/spot.png-5693d467b7986fd6fc70ca36bb0c242c.stex"

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -4000
limit_top = -4000
limit_right = 4000
limit_bottom = 4000
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 15.0
editor_draw_limits = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -10

[node name="Background" type="Sprite" parent="ParallaxBackground"]
light_mask = 5
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_editor_description_": "this background has to be in position (0,0) in order to render properly"
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )

[node name="Particles2D" type="Particles2D" parent="ParallaxBackground/ParallaxLayer3"]
amount = 200
lifetime = 30.0
preprocess = 10.0
randomness = 0.5
visibility_rect = Rect2( -1280, -1280, 2560, 2560 )
process_material = ExtResource( 3 )
texture = SubResource( 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )

[node name="Particles2D" type="Particles2D" parent="ParallaxBackground/ParallaxLayer2"]
amount = 200
lifetime = 30.0
preprocess = 10.0
randomness = 0.5
visibility_rect = Rect2( -1280, -1280, 2560, 2560 )
process_material = ExtResource( 3 )
texture = SubResource( 1 )

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )

[node name="Particles2D" type="Particles2D" parent="ParallaxBackground/ParallaxLayer1"]
amount = 200
lifetime = 30.0
preprocess = 10.0
randomness = 0.5
visibility_rect = Rect2( -1280, -1280, 2560, 2560 )
process_material = ExtResource( 3 )
texture = SubResource( 1 )

[node name="ParallaxLayer0" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Map" type="Node2D" parent="ParallaxBackground/ParallaxLayer0"]

[node name="FleetContainer" type="Node2D" parent="ParallaxBackground/ParallaxLayer0/Map"]

[node name="HUD" parent="ParallaxBackground" instance=ExtResource( 4 )]

[node name="AudioParent" type="Node" parent="."]

[node name="AudioStackingBuildingFinished" type="Node" parent="AudioParent"]
script = ExtResource( 5 )
max_audio_playback = 4
sound_resource = ExtResource( 6 )
default_bus = "UI"

[node name="AudioStackingShipQueueFinished" type="Node" parent="AudioParent"]
script = ExtResource( 5 )
sound_resource = ExtResource( 7 )
default_bus = "UI"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioParent"]
stream = ExtResource( 8 )
volume_db = -25.0
autoplay = true
bus = "Ambiant"
